Fix release date font-size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -779,7 +779,7 @@ footer {
     max-width: 100%
   }
   .movie__release--date {
-    font-size: 20px;
+    font-size: 16px;
   }
   .movie__title {
     font-size: 48px;
